--- a/django-anime-list/anime_rank/templates/rank_anime.html
+++ b/django-anime-list/anime_rank/templates/rank_anime.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Anime Rank</h1>
-<div>
+<div class="mt-5">
   <table class="table table-dark">
     <thead>
       <tr>
