--- a/django-upload-files/mysite/templates/book_list.html
+++ b/django-upload-files/mysite/templates/book_list.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2 class="card-title">Book List</h2>
-    <p>
-        <a href="{% url 'upload_book' %}" class="btn btn-primary">Upload Book</a>
-    </p>
-
+    {% block header_content %} 
+        <h2 class="card-title">Book List</h2>
+        <p>
+            <a href="{% url 'upload_book' %}" class="btn btn-primary">Upload Book</a>
+        </p>
+    {% endblock %}
     <table class="table mb-0">
         <thead>
             <tr>
