adding templates blog pages

--- a/django-blog-ideia/blog/templates/blog_category.html
+++ b/django-blog-ideia/blog/templates/blog_category.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-
 <div class="col-md-8 offset-md-2">
-    <h1>Blog Index</h1>
+    <h1>{{ category | title }}</h1>
     <hr>
     {% for post in posts %}
     <h2><a href="{% url 'blog_detail' post.pk%}">{{ post.title }}</a></h2>
+    <div>
+        {% if post.cover_img %}
+            <img src="{{ post.cover_img.url }}" alt="" width="200">
+        {% else %} 
+            <span class="text-muted">No IMAGE</span>
+        {% endif %}
+    </div>
     <small>
         {{ post.created_on.date }} |&nbsp;
         Categories:&nbsp;
@@ -20,3 +26,4 @@
     {% endfor %}
 </div>
 {% endblock %}
+
