--- a/django-blog-ideia/blog/templates/blog_index.html
+++ b/django-blog-ideia/blog/templates/blog_index.html
@@ -4,9 +4,15 @@
 
 <div class="col-md-8 offset-md-2">
     <h1>Blog Index</h1>
-    <hr>
     {% for post in posts %}
     <h2><a href="{% url 'blog_detail' post.pk%}">{{ post.title }}</a></h2>
+    <div>
+        {% if post.cover_img %}
+            <img src="{{ post.cover_img.url }}" alt="" width="200">
+        {% else %} 
+            <span class="text-muted">No IMAGE</span>
+        {% endif %}
+    </div>
     <small>
         {{ post.created_on.date }} |&nbsp;
         Categories:&nbsp;
