--- a/django-blog-ideia/blog/templates/blog_index.html
+++ b/django-blog-ideia/blog/templates/blog_index.html
@@ -8,21 +8,23 @@
     <h2><a href="{% url 'blog_detail' post.pk%}">{{ post.title }}</a></h2>
     <div>
         {% if post.cover_img %}
-            <img src="{{ post.cover_img.url }}" alt="" width="200">
+            <img src="{{ post.cover_img.url }}" alt="" width="100%" height="300px">
         {% else %} 
             <span class="text-muted">No IMAGE</span>
         {% endif %}
     </div>
-    <small>
-        {{ post.created_on.date }} |&nbsp;
-        Categories:&nbsp;
-        {% for category in post.categories.all %}
-        <a href="{% url 'blog_category' category.name %}">
-            {{ category.name }}
-        </a>&nbsp;
+    <div>
+        <small>
+            {{ post.created_on.date }} |&nbsp;
+            Categories:&nbsp;
+            {% for category in post.categories.all %}
+            <a href="{% url 'blog_category' category.name %}">
+                {{ category.name }}
+            </a>&nbsp;
+            {% endfor %}
+        </small>
+        <p>{{ post.body | slice:":150" }}...</p>
         {% endfor %}
-    </small>
-    <p>{{ post.body | slice:":400" }}...</p>
-    {% endfor %}
+    </div>
 </div>
 {% endblock %}
