--- a/django-blog-ideia/blog/templates/blog_index.html
+++ b/django-blog-ideia/blog/templates/blog_index.html
@@ -1,30 +1,26 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-
-<div class="col-md-8 offset-md-2">
-    <h1>Blog Index</h1>
-    {% for post in posts %}
-    <h2><a href="{% url 'blog_detail' post.pk%}">{{ post.title }}</a></h2>
-    <div>
-        {% if post.cover_img %}
-            <img src="{{ post.cover_img.url }}" alt="" width="100%" height="300px">
-        {% else %} 
-            <span class="text-muted">No IMAGE</span>
-        {% endif %}
-    </div>
-    <div>
-        <small>
-            {{ post.created_on.date }} |&nbsp;
-            Categories:&nbsp;
-            {% for category in post.categories.all %}
-            <a href="{% url 'blog_category' category.name %}">
-                {{ category.name }}
-            </a>&nbsp;
-            {% endfor %}
-        </small>
-        <p>{{ post.body | slice:":150" }}...</p>
+<div class="container">
+    <div class="row">
+        {% for post in posts %}
+        <div class="col-4 mt-4">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ post.cover_img.url }}" class="card-img-top" height="300px">
+                <div class="card-body">
+                    <h5 class="card-title">{{ post.title }}</h5>
+                        <p class="card-text">{{ post.body | slice:":150"}}...</p>
+                        <a href="{% url 'blog_detail' post.pk %}" class="btn btn-primary">Leia mais</a>
+                </div>
+            </div>
+        </div>
         {% endfor %}
     </div>
 </div>
+
+
+ 
+ 
+
 {% endblock %}
+
