icons and tags styling

--- a/django-blog-ideia/blog/templates/blog_index.html
+++ b/django-blog-ideia/blog/templates/blog_index.html
@@ -4,21 +4,34 @@
 <div class="container">
     <div class="row">
         {% for post in posts %}
-        <div class="col-4 mt-4">
-            <div class="card" style="width: 18rem;">
-                <img src="{{ post.cover_img.url }}" class="card-img-top" height="300px">
+        <div class="col-12 col-md-6 col-lg-4 mt-5">
+            <div class="card border-0" style="width: 18rem;">
+                <a href="{% url 'blog_detail' post.pk %}">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        {% if post.cover_img %} 
+                            <img src="{{ post.cover_img.url }}" class="card-img-top embed-responsive-item rounded" height="200px">
+                        {% else %}
+                            <span class="text-muted">No Image</span>
+                        {% endif %}
+                    </div>
+                </a>
                 <div class="card-body">
-                    <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text">{{ post.body | slice:":150"}}...</p>
-                        <a href="{% url 'blog_detail' post.pk %}" class="btn btn-primary">Leia mais</a>
+                    <h5 class="card-title"><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></h5>
+                    {% for category in post.categories.all %}
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <span class="fa fa-tags"></span>
+                                <a class="badge badge-light text-muted"  href="{% url 'blog_category' category.name %}">{{ category.name }}</a>
+                            </small> 
+                        </p>
+                    {% endfor %}
+                    <p class="card-text">{{ post.body | slice:":150"}}...</p>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
 </div>
-
-
  
  
 
