--- a/django-blog-ideia/blog/templates/base.html
+++ b/django-blog-ideia/blog/templates/base.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
 
 <!-- início header -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
