--- a/django-blog-ideia/blog/static/css/app.css
+++ b/django-blog-ideia/blog/static/css/app.css
@@ -1,4 +1,9 @@
-
 body {
     background-color: rgb(75, 92, 87);
+    font-family: source sans pro,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
+    font-size: 1.125rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #222;
+    text-align: left;
 }
