blog index layout

--- a/django-blog-ideia/blog/templates/blog_index.html
+++ b/django-blog-ideia/blog/templates/blog_index.html
@@ -1,39 +1,30 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<div class="container">
-    <div class="row">
-        {% for post in posts %}
-        <div class="col-12 col-md-6 col-lg-4 mt-5">
-            <div class="card border-0" style="width: 18rem;">
-                <a href="{% url 'blog_detail' post.pk %}">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        {% if post.cover_img %} 
-                            <img src="{{ post.cover_img.url }}" class="card-img-top embed-responsive-item rounded" height="200px">
-                        {% else %}
-                            <span class="text-muted card-img-top embed-responsive-item rounded d-flex justify-content-center">No Image</span>
-                        {% endif %}
-                    </div>
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title"><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></h5>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                <span class="fa fa-tags"></span>
-                                {% for category in post.categories.all %}
-                                    <a class="badge badge-light text-muted"  href="{% url 'blog_category' category.name %}">{{ category.name }}</a>
-                                {% endfor %}
-                            </small>
-                        </p>
-                    <p class="card-text">{{ post.body | slice:":150"}}...</p>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
+<h1>Post Index2</h1>
+<section class="grid">
+    {% for post in posts %} 
+    <div class="embed-responsive embed-responsive-16by9">
+        {% if post.cover_img %}
+            <img src="{{ post.cover_img.url }}" class="card-img-top embed-responsive-item rounded">
+        {% else %}
+        <span class="text-muted card-img-top embed-responsive-item rounded d-flex justify-content-center">No Image</span>
+        {% endif %}
     </div>
-</div>
- 
- 
+    <div class="card-body">
+        <h5 class="card-title"><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></h5>
+            <p class="card-text">
+                <small class="text-muted">
+                    <span class="fa fa-tags"></span>
+                    {% for category in post.categories.all %}
+                        <a class="badge badge-light text-muted"  href="{% url 'blog_category' category.name %}">{{ category.name }}</a>
+                    {% endfor %}
+                </small>
+            </p>
+        <p class="card-text">{{ post.body | slice:":150"}}...</p>
+    </div>
+    {% endfor %}
+</section>
 
 {% endblock %}
 
