--- a/django-blog-ideia/blog/templates/base.html
+++ b/django-blog-ideia/blog/templates/base.html
@@ -1,18 +1,19 @@
 {% load static %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
 <!-- início header -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="{% url 'blog_index' %}">Blog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        </div>
-    </div>
-</nav>
+<header class="header">
+    <a href="{% url 'blog_index' %}">Blog</a>
+    <nav>
+        <ul class="menu">
+            <li><a href="/">Sobre</a></li>
+            <li><a href="/">Serviços</a></li>
+            <li><a href="/">Contato</a></li>
+        </ul>
+    </nav>
+</header>
 <!-- fim header -->
 <div class="container">
     {% block page_content %} {% endblock %}
