--- a/django-blog-markdown/blog/templates/blog_index.html
+++ b/django-blog-markdown/blog/templates/blog_index.html
@@ -11,7 +11,7 @@
             <div class="card-content">
             <div class="media">
                 <div class="media-content">
-                    <p class="title is-4">{{ post.title }}</p>
+                    <p class="title is-4"><a href="{% url 'blog_detail' post.id %}">{{ post.title }}</a></p>
                 </div>
             </div>
         
