--- a/django-blog-markdown/blog/templates/blog_index.html
+++ b/django-blog-markdown/blog/templates/blog_index.html
@@ -3,22 +3,35 @@
 {% block content %}
     {% for post in posts %}
         <div class="card">
-            <div class="card-image">
-            <figure class="image is-2by1">
-                <img src="{{ post.cover_img.url }}">
-            </figure>
-            </div>
+           
             <div class="card-content">
             <div class="media">
+                {% for category in post.categories.all %}
+                    {% if category.category_img %}
+                        <div class="media-left">
+                            <figure class="image is-48x48">
+                                <img src="{{ category.category_img.url }}" alt="Placeholder image">
+                            </figure>
+                        </div>
+                    {% else %} 
+                        <div class="media-left">
+                            <figure class="image is-48x48">
+                                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                            </figure>
+                        </div>
+                    {% endif %}
+                {% endfor %}
                 <div class="media-content">
                     <p class="title is-4"><a href="{% url 'blog_detail' post.id %}">{{ post.title }}</a></p>
                 </div>
             </div>
         
             <div class="content">
-                <span class="fa fa-tags"></span>
+                <small class="text-muted">
                     {% for category in post.categories.all %}
-                        <a class="badge badge-light has-background-link-light"  href="{% url 'blog_category' category.name %}">{{ category.name }}</a>
+                        <span class="fa fa-tags">
+                            <a class="badge badge-light has-text-dark"  href="{% url 'blog_category' category.name %}">{{ category.name }}</a>
+                        </span>
                     {% endfor %}
                 </small>
                 <p>{{ post.body | slice:":150"}}...</p>
