--- a/django-blog-markdown/blog/static/css/style.css
+++ b/django-blog-markdown/blog/static/css/style.css
@@ -1,6 +1,6 @@
 body, ul, li, p {
     margin: 0px;
-    padding: opx;
+    padding: 0px;
     list-style: none;
     font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -8,6 +8,8 @@ body, ul, li, p {
 
 body {
     margin-bottom: 100px;
+    background-color: blueviolet;
+
 }
 
 .card {
@@ -15,7 +17,4 @@ body {
     margin: 0 auto;
 }
 
-/* .card > div {
-    padding-top: 10px;
-    margin: 10px;
-} */
+
