--- a/django-blog-markdown/blog/templates/blog_detail.html
+++ b/django-blog-markdown/blog/templates/blog_detail.html
@@ -8,6 +8,19 @@
                 <p class="subtittle">{{ post.created_at|date:"Y-m-d H:i" }}</p>
             </div>
         </section>
+        <section class="image-display">
+            <div class="card">
+                <div class="card-image">
+                  <figure class="image is-4by3 mt-3">
+                    {% if post.cover_img %}
+                        <img src="{% url post.cover_img.url %}" alt="Placeholder image">
+                    {% else %} 
+                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                    {% endif %}
+                  </figure>
+                </div>
+              </div>
+        </section>
         <div class="content intro">
             <p>{{ post.intro }}</p>
         </div>
