adding category page style

--- a/django-blog-markdown/blog/templates/blog_category.html
+++ b/django-blog-markdown/blog/templates/blog_category.html
@@ -1,28 +1,41 @@
 {% extends "base.html" %}
 
-{% block page_content %}
-<div class="col-md-8 offset-md-2">
-    <h1>{{ category | title }}</h1>
-    <hr>
+{% block content %}
+<h1 class="title is-1">{{ category | title }}</h1>
+<div class="columns">
     {% for post in posts %}
-    <h2><a href="{% url 'blog_detail' post.pk%}">{{ post.title }}</a></h2>
-    <div>
-        {% if post.cover_img %}
-            <img src="{{ post.cover_img.url }}" alt="" width="200">
-        {% else %} 
-            <span class="text-muted">No IMAGE</span>
-        {% endif %}
-    </div>
-    <small>
-        {{ post.created_at.date }} |&nbsp;
-        Categories:&nbsp;
-        {% for category in post.categories.all %}
-        <a href="{% url 'blog_category' category.name %}">
-            {{ category.name }}
-        </a>&nbsp;
-        {% endfor %}
-    </small>
-    <p>{{ post.body | slice:":400" }}...</p>
+        <div class="column is-one-third">
+            <div class="card mb-4">
+
+                <div class="card-image">
+                    <figure class="image image is-3by2">
+                        {% if post.cover_img %}
+                            <img src="{{ post.cover_img.url }}">
+                        {% else %} 
+                            <img src="https://bulma.io/images/placeholders/1280x960.png">
+                        {% endif %}
+                    </figure>
+                </div>
+                <div class="card-content">
+                    <div class="media">
+                        <div class="media-content">
+                            <p class="title is-4"><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></p>
+                            <small>
+                                {{ post.created_on.date }} |&nbsp;
+                                    Categories:&nbsp;
+                                {% for category in post.categories.all %}
+                                    <a href="{% url 'blog_category' category.name %}">
+                                        {{ category.name }}
+                                    </a>&nbsp;
+                                {% endfor %}
+                            </small>
+                            <p class="subtitle is-6">{{ post.body | slice:":400" }}...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     {% endfor %}
 </div>
 {% endblock %}
+
