--- a/django-blog-markdown/blog/templates/blog_detail.html
+++ b/django-blog-markdown/blog/templates/blog_detail.html
@@ -13,7 +13,7 @@
                 <div class="card-image">
                   <figure class="image is-4by3 mt-3">
                     {% if post.cover_img %}
-                        <img src="{% url post.cover_img.url %}" alt="Placeholder image">
+                        <img src="{{ post.cover_img.url }}" alt="Placeholder image">
                     {% else %} 
                         <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                     {% endif %}
