--- a/django-blog-markdown/blog/templates/blog_index.html
+++ b/django-blog-markdown/blog/templates/blog_index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="card">
+        <div class="card mb-4">
            
             <div class="card-content">
                 <div class="media">
