--- a/django-blog-markdown/blog/templates/blog_detail.html
+++ b/django-blog-markdown/blog/templates/blog_detail.html
@@ -2,25 +2,27 @@
 {% load blog_extras  %}
 {% block content %} 
     <div class="box">
-        <section class="hero is-primary is-small"> 
+        <section class="hero is-dark is-small"> 
             <div class="hero-body">
                 <p class="title">{{ post.title }}</p>
-                <p class="subtittle">{{ post.created_at|date:"Y-m-d H:i" }}</p>
+                <p class="subtittle">{{ post.created_at|date:"d-m-Y H:i" }}</p>
             </div>
         </section>
+        
         <section class="image-display">
-            <div class="card">
-                <div class="card-image">
-                  <figure class="image is-4by3 mt-3">
-                    {% if post.cover_img %}
-                        <img src="{{ post.cover_img.url }}" alt="Placeholder image">
-                    {% else %} 
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                    {% endif %}
-                  </figure>
+            {% if post.cover_img %}
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image is-4by3 mt-3">
+                            <img src="{{ post.cover_img.url }}" alt="Placeholder image">
+                        </figure>
+                    </div>
                 </div>
-              </div>
+            {% else %}
+                <br>
+            {% endif %} 
         </section>
+
         <div class="content intro">
             <p>{{ post.intro }}</p>
         </div>
