--- a/django-blog-markdown/blog/templates/base.html
+++ b/django-blog-markdown/blog/templates/base.html
@@ -18,7 +18,7 @@
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-          <span aria-hidden="true"></span>
+          <span aria-hidden="true"> </span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
         </a>
@@ -47,5 +47,13 @@
       {% endblock %}
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Desenvolvido por Matheus Vieira</strong>
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
