--- a/django-blog-markdown/blog/templates/blog_index.html
+++ b/django-blog-markdown/blog/templates/blog_index.html
@@ -36,7 +36,7 @@
                 </small>
                 <p>{{ post.body | slice:":150"}}...</p>
                 <br>
-                <time>{{ post.created_at|date:"d-m-Y H:i" }}</time>
+                <time>{{ post.created_at|date:"d b Y H:i" }}</time>
             </div>
             </div>
         </div>
