blog category adjust

--- a/django-blog-markdown/blog/templates/base.html
+++ b/django-blog-markdown/blog/templates/base.html
@@ -14,7 +14,11 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="{% url 'blog_index' %}">
-          <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+          <svg height=30 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;" viewBox="0 0 242 367.5" x="0px" y="0px" fill-rule="evenodd" clip-rule="evenodd"><defs><style type="text/css">
+            .fil0 {fill:black}
+ 
+          </style></defs><g><path class="fil0" d="M231 47l-18 0 0 -36c0,-6 -5,-11 -10,-11l-169 0c-19,0 -34,15 -34,34l0 225c0,19 15,35 34,35l197 0c6,0 11,-5 11,-11l0 -225c0,-6 -5,-11 -11,-11zm-137 21l0 43 -11 -7c-4,-2 -8,-2 -11,0l-12 7 0 -43 34 0zm-55 0l0 61c0,9 9,14 16,10l22 -14 23 14c7,4 16,-1 16,-10l0 -61 104 0 0 204 -186 0c-7,0 -13,-6 -13,-13l0 -193c7,2 11,2 18,2zm-5 -47l158 0 0 26 -158 0c-7,0 -13,-6 -13,-13 0,-7 6,-13 13,-13z"/></g></svg>
+          <span class="has-text-weight-bold is-size-4 ml-4">MG</span>
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -47,13 +51,5 @@
       {% endblock %}
     </div>
   </section>
-
-  <footer class="footer">
-    <div class="content has-text-centered">
-      <p>
-        <strong>Desenvolvido por Matheus Vieira</strong>
-      </p>
-    </div>
-  </footer>
 </body>
 </html>
